Fix footer spacing above social media buttons

--- a/css/src/_footer.scss
+++ b/css/src/_footer.scss
@@ -216,6 +216,7 @@
 
 		.college-contact,
 		.widget_a2a_share_save_widget,
+		.widget_a2a_follow_widget,
 		.waa {
 			margin-top: 15px;
 		}
